# MarkovLib

./: MarkovLib.cabal  README.md
app/: Main.hs
src/: Utils.hs
src/Markov/: Chain.hs  Hidden.hs  Neural.hs
tests/: Spec.hs
