cabal-version: 2.4
name: MarkovLib
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
      Markov.Chain
    , Markov.Hidden
    , Markov.Neural
    , Utils
  hs-source-dirs: src
  build-depends:
      base >=4.14 && <5
    , random
  default-language: Haskell2010

executable markov-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base
    , MarkovLib
    , random
  default-language: Haskell2010

test-suite markov-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tests
  build-depends:
      base
    , MarkovLib
    , random
    , HUnit
  default-language: Haskell2010
